objects/ccpe_r__Retainer__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_r__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that the retainer is related to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retainers</relationshipLabel>
        <relationshipName>Retainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Current_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Current_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccpe_r__End_Date__c</fullName>
        <description>The date signifies the end date of the retainer after which no more line items can be created</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hours_Balance__c</fullName>
        <description>The remaining hours that can be assigned to work for this Retainer</description>
        <formula>ccpe_r__Hours_Gross__c - ccpe_r__Current_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hours_Gross__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of hours available for Work for this Retainer</description>
        <label>Hours Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hours_Roll_Over__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the retainer hours roll over between time periods for the client</description>
        <label>Hours Roll Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity that the retainer is related to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Retainers</relationshipLabel>
        <relationshipName>Retainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Spend_Balance__c</fullName>
        <description>The amount that is available to spend on new Work for this Retainer</description>
        <formula>ccpe_r__Spend_Gross__c - ccpe_r__Current_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Spend_Gross__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount this Retainer can spend</description>
        <label>Spend Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Spend_Roll_Over__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the retainer spend rolls over between time periods for the client</description>
        <label>Spend Roll Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Start_Date__c</fullName>
        <description>The start date signifies when a retainer can first be used</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this retainer acts as a template for new retainer creation</description>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Time_Period__c</fullName>
        <label>Time Period</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Type__c</fullName>
        <description>Denotes if the retainer is skill based or global based in nature</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_r__isActive__c</fullName>
        <formula>ccpe_r__Start_Date__c &lt;= TODAY() &amp;&amp; (ISBLANK(ccpe_r__End_Date__c) || ccpe_r__End_Date__c &gt; TODAY())</formula>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>ccpe_r__Non_Skill_Based</fullName>
        <active>true</active>
        <description>A non-skill based Retainer</description>
        <label>Non-Skill Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccpe_r__Skill_Based</fullName>
        <active>true</active>
        <description>A skill based Retainer.</description>
        <label>Skill Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccpe_r__Skills_Based</fullName>
        <active>false</active>
        <label>Skills Based</label>
    </recordTypes>
    <validationRules>
        <fullName>ccpe_r__One_Time_Retainers_Do_Not_Roll_Over</fullName>
        <active>true</active>
        <description>A one-time Retainer cannot roll-over</description>
        <errorConditionFormula>ISPICKVAL(ccpe_r__Time_Period__c, &apos;One Time&apos;) &amp;&amp; (ccpe_r__Spend_Roll_Over__c == true || ccpe_r__Hours_Roll_Over__c == true)</errorConditionFormula>
        <errorMessage>One-time Retainers cannot roll over</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_r__Retainer_Must_Have_Acc_Or_Opp</fullName>
        <active>true</active>
        <description>Every retainer must be related to either an Account or an Opportunity.</description>
        <errorConditionFormula>ISBLANK(ccpe_r__Account__c)</errorConditionFormula>
        <errorDisplayField>ccpe_r__Account__c</errorDisplayField>
        <errorMessage>There must be a related Account</errorMessage>
    </validationRules>
</CustomObject>